[package]
name = "rotating-cube"
version = "0.1.0"
authors = ["Eric Sognefest"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.35"
wasm-bindgen = "0.2.58"
gl_matrix = "0.0.2"

[dependencies.web-sys]
version = "0.3.35"
features = [
  'console',
  'Document',
  'Element',
  'Node',
  'Window',
  'Performance',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'HtmlElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlUniformLocation', 
  'WebGlProgram',
  'WebGlShader',
]
